--- a/radio.css
+++ b/radio.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: 'radio';
   src: url('font/radio.eot');
@@ -9,6 +10,8 @@
   font-weight: normal;
   font-style: normal;
 }
+*/
+
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "radio";
   font-style: normal;
@@ -29,11 +32,13 @@
 }
 
 body{
+/*
 font-family:sans-serif;
 font-size:1.2em;
+*/
 line-height:1.7em;
 color:#000;
-background:#ffc;
+background:rgb(255, 255, 255);
 margin:0;
 padding:0;
 text-align:center;
@@ -41,16 +46,18 @@ text-align:center;
 
 #radio{margin:2em auto 2em auto;width:400px;}
 
-.icon-play-circled2:before { content: '\e800'; }
+/*
+.icon-play:before { content: '\f04b'; }
 .icon-music:before { content: '\e801'; }
 .icon-clock:before { content: '\e802'; }
 .icon-user:before { content: '\e803'; }
 .icon-book:before { content: '\e804'; }
 .icon-megaphone:before { content: '\e805'; }
-.icon-pause-circle-o:before { content: '\f28c'; }
+.icon-pause:before { content: '\f04c'; }
+*/
 
 #cont{width:300px;height:300px;position:relative;}
-#info{text-align:left;}
-#info li{list-style:none;}
+/* #info{text-align:left;} */
+/* #info li{list-style:none;} */
 #ppbutton{font-size: 5em;line-height:150px;vertical-align:middle;}
-#cover{width:150px;height:150px;float:left;}
+/* #cover{width:150px;height:150px;float:left;} */
